// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Components.BrandsComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-l7puij"
    >
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="up-worthy.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="scientific.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="guardian.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="salon.svg"
      />
      <img
        alt="tdlr"
        className="css-1o2ogah"
        src="forbes.svg"
      />
    </div>
  </div>
</div>
`;

exports[`<Components.GraphicsComponent/> renders correctly 1`] = `
<div>
  <div
    className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
  >
    <div
      className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
    >
      <div
        className="css-1xeryup"
      >
        Over 146 million trees planted
      </div>
      <div
        className="css-q40ub6"
      >
        <div>
          <div
            className="css-1wjqaby"
          >
            December 2009
          </div>
          <div
            className="css-1yltisf"
          >
            1.1 sec
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            to plant a tree
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            15 million
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            active users
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            12,101,152
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            EUR invested
          </div>
        </div>
        <div>
          <div
            className="css-1wjqaby"
          >
            over
          </div>
          <div
            className="css-1yltisf"
          >
            9000
          </div>
          <div
            className="css-qqlgcp"
          />
          <div
            className="css-1wjqaby"
          >
            planting sites
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.HowItWorksComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-kl3k6o"
    >
      <div
        className="css-j4shcj"
      >
        How it works
      </div>
      <div
        className="css-y8pvf0"
      >
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="ads.svg"
          />
          <div
            className="css-gz8dae"
          >
            Search ads generate income for Ecosia.
          </div>
        </div>
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="ecosia.svg"
          />
          <div
            className="css-gz8dae"
          >
            You search the web with Ecosia.
          </div>
        </div>
        <div
          className="css-1yltisf"
        >
          <img
            alt="tdlr"
            className="css-184rirz"
            src="income.svg"
          />
          <div
            className="css-gz8dae"
          >
            Ecosia uses this income to plant trees.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.PlantTreesComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-4skt07"
    >
      <div
        className="css-j4shcj"
      >
        Plant trees while you search the web
      </div>
      <div
        className="css-csqwk5"
      />
      <div>
        We use the profit we make from your searches to plant trees where they are needed most. 
      </div>
      <div>
        Get the free browser extension and plant trees with every search.
      </div>
      <div
        className="css-csqwk5"
      />
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Add Ecosia to Firefox
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Components.ReportsComponent/> renders correctly 1`] = `
<div
  className="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 css-mhc70k-MuiGrid-root"
>
  <div
    className="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-xl-12 css-1idn90j-MuiGrid-root"
  >
    <div
      className="css-iq2mru"
    >
      <div>
        <img
          alt="transparency"
          src="https://infopages-prod-cdn.ecosia.org/assets/images/what/transperancy-blue-img-8408403664.svg"
        />
      </div>
      <div
        className="css-j4shcj"
      >
        We know trust has to be earned
      </div>
      <div
        className="css-ds9a2i"
      >
        That is why we publish our monthly financial reports and tree planting receipts. 
        <br />
         This way you can hold us accountable as we follow our journey to a reforested world.
      </div>
      <div>
        <button
          className="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root  css-sghohy-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          View Reports
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;
